Remove unused App classes and clean up TipsAndTricks package; add ArrayTutorial class